hd-53 - Delete position endpoint
