# src/storage/api-docs/api-docs.json
@@ -1441,6 +1441,83 @@
                     }
                 ]
             },
+            "delete": {
+                "tags": [
+                    "Admin - Position"
+                ],
+                "summary": "Delete a specific position",
+                "description": "Delete a specific position",
+                "operationId": "deletePosition",
+                "parameters": [
+                    {
+                        "name": "position_id",
+                        "in": "path",
+                        "required": true,
+                        "example": "MYPOS2"
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "null"
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "format": "text",
+                                            "example": "Unauthenticated"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "User without permission to the endpoint",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "format": "text",
+                                            "example": "Permission denied."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Political party not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "format": "text",
+                                            "example": "Position not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            },
             "patch": {
                 "tags": [
                     "Admin - Position"
